--- a/frontend/src/styles/weatherIcon.css
+++ b/frontend/src/styles/weatherIcon.css
@@ -1,6 +1,5 @@
-/* .icon_container {
+.icon_container {
   margin: 0;
-  display: flex;
 }
 
 .icon_container .main_icon {
@@ -8,10 +7,10 @@
   height: 250px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 400px) {
   .icon_container .main_icon {
-    width: min(100%, 300px);
-    height: 300px;
+    width: min(100%, 400px);
+    height: auto;
   }
 }
 
@@ -20,7 +19,7 @@
     width: min(100%, 400px);
     height: 400px;
   } 
-} */
+}
 
 /* Gonna need more media query icon sizes to account for the icon size bleeding into the content on smaller desktop screen sizes */
 
